; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/iicbus/extr_s35390a.c_s390rtc_read.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/iicbus/extr_s35390a.c_s390rtc_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.s390rtc_softc = type { i32 }
%struct.iic_msg = type { i32, i64, i32*, i32 }

@IIC_M_RD = common dso_local global i32 0, align 4
@IIC_WAIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32*, i64)* @s390rtc_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @s390rtc_read(i32 %0, i32 %1, i32* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.s390rtc_softc*, align 8
  %11 = alloca [1 x %struct.iic_msg], align 16
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i64 %3, i64* %9, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call %struct.s390rtc_softc* @device_get_softc(i32 %14)
  store %struct.s390rtc_softc* %15, %struct.s390rtc_softc** %10, align 8
  %16 = getelementptr inbounds [1 x %struct.iic_msg], [1 x %struct.iic_msg]* %11, i64 0, i64 0
  %17 = getelementptr inbounds %struct.iic_msg, %struct.iic_msg* %16, i32 0, i32 0
  %18 = load %struct.s390rtc_softc*, %struct.s390rtc_softc** %10, align 8
  %19 = getelementptr inbounds %struct.s390rtc_softc, %struct.s390rtc_softc* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* %7, align 4
  %22 = or i32 %20, %21
  store i32 %22, i32* %17, align 16
  %23 = getelementptr inbounds %struct.iic_msg, %struct.iic_msg* %16, i32 0, i32 1
  %24 = load i64, i64* %9, align 8
  store i64 %24, i64* %23, align 8
  %25 = getelementptr inbounds %struct.iic_msg, %struct.iic_msg* %16, i32 0, i32 2
  %26 = load i32*, i32** %8, align 8
  store i32* %26, i32** %25, align 16
  %27 = getelementptr inbounds %struct.iic_msg, %struct.iic_msg* %16, i32 0, i32 3
  %28 = load i32, i32* @IIC_M_RD, align 4
  store i32 %28, i32* %27, align 8
  %29 = load i32, i32* %6, align 4
  %30 = getelementptr inbounds [1 x %struct.iic_msg], [1 x %struct.iic_msg]* %11, i64 0, i64 0
  %31 = load i32, i32* @IIC_WAIT, align 4
  %32 = call i32 @iicbus_transfer_excl(i32 %29, %struct.iic_msg* %30, i32 1, i32 %31)
  store i32 %32, i32* %13, align 4
  %33 = load i32, i32* %13, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %37

35:                                               ; preds = %4
  %36 = load i32, i32* %13, align 4
  store i32 %36, i32* %5, align 4
  br label %58

37:                                               ; preds = %4
  store i32 0, i32* %12, align 4
  br label %38

38:                                               ; preds = %54, %37
  %39 = load i32, i32* %12, align 4
  %40 = sext i32 %39 to i64
  %41 = load i64, i64* %9, align 8
  %42 = icmp ult i64 %40, %41
  br i1 %42, label %43, label %57

43:                                               ; preds = %38
  %44 = load i32*, i32** %8, align 8
  %45 = load i32, i32* %12, align 4
  %46 = sext i32 %45 to i64
  %47 = getelementptr inbounds i32, i32* %44, i64 %46
  %48 = load i32, i32* %47, align 4
  %49 = call i32 @bitreverse(i32 %48)
  %50 = load i32*, i32** %8, align 8
  %51 = load i32, i32* %12, align 4
  %52 = sext i32 %51 to i64
  %53 = getelementptr inbounds i32, i32* %50, i64 %52
  store i32 %49, i32* %53, align 4
  br label %54

54:                                               ; preds = %43
  %55 = load i32, i32* %12, align 4
  %56 = add nsw i32 %55, 1
  store i32 %56, i32* %12, align 4
  br label %38

57:                                               ; preds = %38
  store i32 0, i32* %5, align 4
  br label %58

58:                                               ; preds = %57, %35
  %59 = load i32, i32* %5, align 4
  ret i32 %59
}

declare dso_local %struct.s390rtc_softc* @device_get_softc(i32) #1

declare dso_local i32 @iicbus_transfer_excl(i32, %struct.iic_msg*, i32, i32) #1

declare dso_local i32 @bitreverse(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
